report outputs almost finished

--- a/config/report-template.ipynb
+++ b/config/report-template.ipynb
@@ -6,18 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%config InlineBackend.figure_format = \"svg\"\n",
     "import html\n",
     "from collections import defaultdict\n",
     "from pathlib import Path\n",
+    "import json\n",
+    "from pprint import pformat\n",
+    "from tempfile import NamedTemporaryFile\n",
     "\n",
+    "from IPython.display import display, HTML\n",
     "from ipywidgets import widgets\n",
-    "\n",
     "import pandas as pd\n",
-    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
     "import compress_pickle\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "from machinestate.html_export import to_html as ms_to_html\n",
+    "from kerncraft.machinemodel import MachineModel\n",
+    "from kerncraft.kernel import KernelCode\n",
     "\n",
     "from hpc_inspect.inspector import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "machine = MachineModel(path_to_yaml='machine.yml')\n",
+    "kernel = KernelCode(Path('kernel.c').read_text(), machine)"
    ]
   },
   {
@@ -31,15 +51,6 @@
     "compilers = [cc for cc in data.compiler.unique() if cc is not None]\n",
     "incore_models = [icm for icm in data.incore_model.unique() if icm is not None]\n",
     "cache_predictors = [cp for cp in data.cache_predictor]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.columns"
    ]
   },
   {
@@ -100,9 +111,13 @@
     "    cc_tab_children.append(icm_tab)\n",
     "    for j, icm in enumerate(incore_models):\n",
     "        icm_tab.set_title(j, icm)\n",
+    "        model_output = data.query(\"compiler == @cc and incore_model == @icm\")['in-core model output'].unique()\n",
+    "        if model_output:\n",
+    "            model_output = model_output[0]\n",
+    "        else:\n",
+    "            model_output = ''\n",
     "        icm_tab_children.append(\n",
-    "            widgets.HTML(value='<pre style=\"line-height: 1;\">{}</pre>'.format(html.escape(\n",
-    "                data.query(\"compiler == @cc and incore_model == @icm\")['in-core model output'].unique()[0]))))\n",
+    "            widgets.HTML(value='<pre style=\"line-height: 1;\">{}</pre>'.format(html.escape(model_output))))\n",
     "    icm_tab.children = icm_tab_children\n",
     "cc_tab.children = cc_tab_children\n",
     "\n",
@@ -122,8 +137,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO readout and present LCs\n",
-    "data.columns"
+    "lc_data = []\n",
+    "for col in data.columns:\n",
+    "    if not col.endswith(' LCs'):\n",
+    "        continue\n",
+    "    cache = col.split(' ')[0]\n",
+    "    for lc in data.get(col).dropna()[0]:\n",
+    "        lc['cache'] = cache\n",
+    "        lc_data.append(lc)\n",
+    "lc_df = pd.DataFrame(lc_data)\n",
+    "idx = pd.MultiIndex.from_frame(lc_df[['cache', 'tail']])\n",
+    "lc_df = pd.DataFrame(lc_data, columns=['condition', 'hits', 'misses', 'evicts'], index=idx)\n",
+    "lc_df\n",
+    "# TODO present size of N for condition to be fullfilled"
    ]
   },
   {
@@ -144,31 +170,60 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "data_defines = data.sort_values(by=['define'])\n",
-    "fig, axs = mpl.pyplot.subplots(len(compilers), len(incore_models), squeeze=False,\n",
-    "                               figsize=(7*len(incore_models),4*len(compilers)))\n",
+    "fig, axs = plt.subplots(len(compilers), len(incore_models),\n",
+    "                        squeeze=False,\n",
+    "                        figsize=(4*len(incore_models),3*len(compilers)),\n",
+    "                        sharey=True,\n",
+    "                        sharex=True)\n",
     "for i_cc, cc in enumerate(compilers):\n",
     "    for i_icm, icm in enumerate(incore_models):\n",
     "        ax = axs[i_cc, i_icm]\n",
     "        ax.set_title(\"{} {}\".format(cc, icm))\n",
-    "        ax.set_ylabel(\"cycle per {} iterations\".format(iterations_per_cacheline))\n",
-    "        ax.set_xlabel(\"\")\n",
-    "        ecm_data = data_defines.query('pmodel==\"ECM\" and cores==1 and incore_model == @icm')\n",
-    "        ecm_data.plot.area(\n",
-    "            y=['T_RegL1', 'T_L1L2', 'T_L2L3', 'T_L3MEM'], x='define', logx=True, xlim=100, ylim=0, ax=ax)\n",
-    "        data_defines.query('pmodel==\"Benchmark\" and cores==1').plot(\n",
-    "            y='performance [cy/CL]', x='define', logx=True, xlim=100, ylim=0, label='Measured', ax=ax)\n",
-    "        data_defines.query('pmodel==\"RooflineIACA\" and incore_model == @icm').plot(\n",
-    "            y='performance [cy/CL]', x='define', logx=True, xlim=100, ylim=0, label='RL pred.', ax=ax)\n",
-    "# TODO improve legend (and reduce to one)\n",
+    "        ax.set_xscale(\"log\")\n",
+    "        ax.xaxis.set_tick_params(labelbottom=True)\n",
+    "        #ax.yaxis.set_tick_params(labelleft=True)\n",
+    "        ax.grid()\n",
+    "        ax.set_axisbelow(True)  # places gridlines behind everything else\n",
+    "        \n",
+    "        # ECM\n",
+    "        ecm_data = data_defines.query('pmodel==\"ECM\" and cores==1 and incore_model == @icm and compiler == @cc')\n",
+    "        ax.stackplot(\n",
+    "            ecm_data['define'],\n",
+    "            ecm_data['T_RegL1'], ecm_data['T_L1L2'], ecm_data['T_L2L3'], ecm_data['T_L3MEM'],\n",
+    "            labels=('T_RegL1', 'T_L1L2', 'T_L2L3', 'T_L3MEM'))\n",
+    "        ax.plot(ecm_data['define'], ecm_data.T_comp, label='T_comp')\n",
+    "        \n",
+    "        # Benchmark\n",
+    "        bench_data = data_defines.query('pmodel==\"Benchmark\" and cores==1 and compiler == @cc')\n",
+    "        ax.plot(bench_data.define, bench_data['performance [cy/CL]'], '+', label='Measured')\n",
+    "        \n",
+    "        # RooflineIACA\n",
+    "        roof_data = data_defines.query('pmodel==\"RooflineIACA\" and incore_model == @icm and compiler == @cc')\n",
+    "        ax.plot(roof_data.define, roof_data['performance [cy/CL]'], label='RL pred.')\n",
+    "        \n",
+    "        ax.set_ylim(0)\n",
+    "        if i_icm == len(incore_models) - 1:\n",
+    "            T_to_P = lambda T: float(machine['clock']) / T * iterations_per_cacheline\n",
+    "            ax_right = ax.twinx()\n",
+    "            ymin, ymax = ax.get_ylim()\n",
+    "            ax_right.set_ylim(ax.get_ylim())\n",
+    "            ax_right.set_yticklabels([\"{:.1f}\".format(T_to_P(t)/1e9) for t in ax.get_yticks()])\n",
+    "            ax_right.set_ylabel(\"giga iterations per second\")\n",
+    "        if i_icm == 0 and i_cc == 0:\n",
+    "            ax.legend(loc='upper left')\n",
+    "        if i_icm == 0:\n",
+    "            ax.set_ylabel(\"cycle per {} iterations\".format(iterations_per_cacheline))\n",
+    "        if i_cc == len(compilers) - 1:\n",
+    "            ax.set_xlabel(\"dimension length\")\n",
+    "# TODO move legend some where more useful\n",
     "# TODO name columns and rows\n",
-    "# TODO fix scale/limits to show all available data\n",
-    "# TODO add It/s, flop/s axis to right\n",
-    "# TODO find good metric (or name) for x-axis"
+    "# TODO find good metric (or name) for x-axis\n",
+    "# TODO cache-analysis distinction (tabs?)"
    ]
   },
   {
@@ -204,23 +259,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_cores = data.sort_values(by=['cores'])\n",
-    "fig, axs = mpl.pyplot.subplots(len(compilers), len(incore_models), squeeze=False,\n",
-    "                               figsize=(7*len(incore_models),4*len(compilers)))\n",
+    "fig, axs = plt.subplots(len(compilers), len(incore_models), squeeze=False,\n",
+    "                               figsize=(4*len(incore_models),3*len(compilers)))\n",
     "max_define = data.define.max()\n",
     "for i_cc, cc in enumerate(compilers):\n",
     "    for i_icm, icm in enumerate(incore_models):\n",
     "        ax = axs[i_cc, i_icm]\n",
     "        ax.set_title(\"{} {}\".format(cc, icm))\n",
-    "        data_cores.query('pmodel==\"Benchmark\" and define==@max_define').plot(\n",
-    "            x='cores', y='performance [cy/CL]', xlim=1, ylim=0, legend=True, label='Measured', ax=ax)\n",
-    "        data_cores.query('pmodel==\"ECM\" and define==@max_define and incore_model==@icm').plot(\n",
-    "            x='cores', y='performance [cy/CL]', xlim=1, ylim=0, legend=True, label='ECM pred.', ax=ax)\n",
-    "        data_cores.query('pmodel==\"RooflineIACA\" and define==@max_define and incore_model==@icm').plot(\n",
-    "            x='cores', y='performance [cy/CL]', xlim=1, ylim=0, legend=True, label='RL pred.', ax=ax)\n",
+    "        ax.xaxis.set_tick_params(labelbottom=True)\n",
+    "        ax.grid()\n",
+    "        \n",
+    "        bench_data = data.query(\n",
+    "            'pmodel==\"Benchmark\" and define==@max_define and compiler == @cc'\n",
+    "        ).sort_values(by=['cores'])\n",
+    "        ax.plot(bench_data.cores, bench_data['performance [It/s]']/1e9, label='Measured')\n",
+    "        ecm_data = data.query(\n",
+    "            'pmodel==\"ECM\" and define==@max_define and incore_model==@icm and compiler == @cc'\n",
+    "        ).sort_values(by=['cores'])\n",
+    "        ax.plot(ecm_data.cores, ecm_data['performance [It/s]']/1e9, label='ECM pred.')\n",
+    "        roof_data = data.query(\n",
+    "            'pmodel==\"RooflineIACA\" and define==@max_define and incore_model==@icm and compiler == @cc'\n",
+    "        ).sort_values(by=['cores'])\n",
+    "        ax.plot(roof_data.cores, roof_data['performance [It/s]']/1e9, label='RL pred.')\n",
+    "        \n",
+    "        ax.set_ylim(0)\n",
+    "        ax.set_axisbelow(True)  # places gridlines behind everything else\n",
+    "        if i_icm != 0:\n",
+    "            ax.yaxis.set_tick_params(labelleft=False)\n",
+    "        if i_icm == len(incore_models) - 1:\n",
+    "            P_to_T = lambda P: iterations_per_cacheline*float(machine['clock'])/P\n",
+    "            ax_right = ax.twinx()\n",
+    "            ymin, ymax = ax.get_ylim()\n",
+    "            ax_right.set_ylim(ax.get_ylim())\n",
+    "            ax_right.set_yticklabels([\"{:.1f}\".format(P_to_T(t*1e9)) for t in ax.get_yticks()])\n",
+    "            ax_right.set_ylabel(\"cycle per {} iterations\".format(iterations_per_cacheline))\n",
     "        ax.set_xticks(range(int(data.cores.min()), int(data.cores.max() + 1)))\n",
-    "# TODO find issue with ECM scaling curve"
+    "        if i_icm == 0 and i_cc == 0:\n",
+    "            ax.legend()\n",
+    "        if i_icm == 0:\n",
+    "            ax.set_ylabel(\"giga iterations per second\")\n",
+    "        if i_cc == len(compilers) - 1:\n",
+    "            ax.set_xlabel(\"cores\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -237,7 +324,17 @@
    },
    "outputs": [],
    "source": [
-    "# TODO collect and present machine state"
+    "with open('machinestate.json') as f:\n",
+    "    machinestate = json.load(f)\n",
+    "display(HTML('''\n",
+    "    <iframe class=\"machinestatewrapper\" width=\"100%\" height=\"1000\" data-content=\"'''+html.escape(ms_to_html(machinestate))+'''\"></iframe>\n",
+    "    <script>\n",
+    "        var msw = $(\".machinestatewrapper\")[0];\n",
+    "        var html = msw.getAttribute('data-content');\n",
+    "        msw.contentDocument.write(html);\n",
+    "        msw.contentWindow.document.close();\n",
+    "    </script>'''))\n",
+    "# TODO replace by more elegent solution"
    ]
   },
   {
@@ -247,6 +344,13 @@
     "# Notebook things to look at:\n",
     " * https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Styling.html\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
