updated report template

--- a/config/report-template.ipynb
+++ b/config/report-template.ipynb
@@ -11,6 +11,7 @@
    "source": [
     "%config InlineBackend.figure_format = \"svg\"\n",
     "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "from IPython.display import display\n",
     "\n",
@@ -32,7 +33,10 @@
    "outputs": [],
    "source": [
     "machine = MachineModel(path_to_yaml='machine.yml')\n",
-    "kernel = KernelCode(Path('kernel.c').read_text(), machine)"
+    "kernel = KernelCode(Path('kernel.c').read_text(), machine)\n",
+    "print('model name:', machine['model name'])\n",
+    "print('frequency:', machine['clock'])\n",
+    "print(os.getcwd().split('jobs/')[-1])"
    ]
   },
   {
